Adds manifest, hire data, and example modules to test puppet master provisioning of the agent servers

--- a/puppetmaster-server/puppetlabs/code/hiera.yaml
+++ b/puppetmaster-server/puppetlabs/code/hiera.yaml
@@ -12,6 +12,6 @@
 :json:
   :datadir: "/etc/puppetlabs/code/environments/%{::environment}/hieradata"
 :hierarchy:
-  - "node/%{::hostname}"
+  - "nodes/%{::hostname}"
   - "os/%{::kernel}"
   - common
